# micro-orbiting

./: .gitignore  Install_instructions.md  Installation.md  README.md
micro_orbiting_mpc/: CMakeLists.txt  package.xml
src/micro_orbiting_mpc/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/micro_orbiting_mpc/config/: feedback_lin.yaml  nominal_mpc.yaml  reactive.yaml  robot_parameters_gazebo.yaml  spiral_mpc_empc.yaml  spiral_mpc_lin.yaml  tuning.yaml
src/micro_orbiting_mpc/config/trajectories/: traj_01.yaml
src/micro_orbiting_mpc/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/micro_orbiting_mpc/launch/: spacecraft_mpc_node.launch.py  spacecraft_mpc_node.nominal_mpc.py
src/micro_orbiting_mpc/log/: latest_build
src/micro_orbiting_mpc/micro_orbiting_mpc/: fault_simulation_node.py  init_node.py  spacecraft_mpc_node.py  viz_node.py  viz_plan.py
src/micro_orbiting_mpc/micro_orbiting_mpc/controllers/: controller_base_class.py  controller_mpc_base.py  cost_function.py  fb_linearizing_controller.py  reactive_controller.py  state_constants.py
src/micro_orbiting_mpc/micro_orbiting_mpc/models/: ff_dynamics.py  ff_input_bounds.py
src/micro_orbiting_mpc/micro_orbiting_mpc/test/: dummy.py
src/micro_orbiting_mpc/micro_orbiting_mpc/util/: aliases.sh  cost_handler.py  data_viz_PlotJuggler.xml  data_viz_PlotJuggler__fb_lin.xml  data_viz_PlotJuggler__nominal.xml  data_viz_PlotJuggler__spiral.xml  data_viz_PlotJuggler__spiral_lin.xml  get_example.py  polytope.py  setup_cost_fcn_db.py  test_input_handler.py  utils.py  yes_no_question.py
(+37 files in other folders)
