<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_orbiting_mpc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stockner@kth.se">raphael</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- <depend>px4_offboard</depend> -->
  <depend>micro_orbiting_msgs</depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
